--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "@commercelayer/react-components": "^4.8.6",
     "@commercelayer/sdk": "^5.26.0",
     "@faker-js/faker": "^8.3.1",
+    "@googlemaps/js-api-loader": "^1.16.2",
     "@headlessui/react": "^1.7.17",
     "@next/bundle-analyzer": "^14.0.4",
     "@next/eslint-plugin-next": "^14.0.4",
