--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "@playwright/test": "^1.40.1",
     "@tailwindcss/forms": "^0.5.7",
     "@types/async-retry": "1.4.8",
+    "@types/google.maps": "^3.54.10",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.46",
