--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "commercelayer"
   ],
   "dependencies": {
-    "@commercelayer/react-components": "^4.8.1",
+    "@commercelayer/react-components": "^4.9.0-beta.1",
     "@commercelayer/sdk": "^5.26.0",
     "@faker-js/faker": "^8.3.1",
     "@googlemaps/js-api-loader": "^1.16.2",
